--- a/SantanderGlobalTech.HackerNews.Infra.Data/SantanderGlobalTech.HackerNews.Infra.Data.csproj
+++ b/SantanderGlobalTech.HackerNews.Infra.Data/SantanderGlobalTech.HackerNews.Infra.Data.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Polly" Version="7.2.2" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
