--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,14 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
 end_of_line = lf
+indent_style = space
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.yml, *.yaml]
+indent_size = 2
+
+[*.cs, *.cake]
+indent_size = 4
