fix(ci): added dotnet matrix version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ on:
 jobs:
   validate-changes:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet: ['3.1.x', '5.0.x']
+
     steps:
       - uses: actions/checkout@v2.2.0
         with:
@@ -27,6 +31,11 @@ jobs:
 
       - name: Install coverlet tool globally
         run: dotnet tool install --global coverlet.console
+
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.x'
 
       - name: Run cake Sonar task
         uses: cake-build/cake-action@v1
