fix(ci): fixed cake task arrgument value

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           target: Sonar
           arguments: |
-            token: ${{ SONAR_TOKEN }}
+            token: "${{ SONAR_TOKEN }}"
