--- a/SantanderGlobalTech.HackerNews.Api/SantanderGlobalTech.HackerNews.Api.csproj
+++ b/SantanderGlobalTech.HackerNews.Api/SantanderGlobalTech.HackerNews.Api.csproj
@@ -10,6 +10,10 @@
     <DocumentationFile>C:\Users\joaopedro\source\repos\aubay\SantanderGlobalTech.HackerNews\SantanderGlobalTech.HackerNews.Api\SantanderGlobalTech.HackerNews.Api.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\joaopedro\source\repos\aubay\SantanderGlobalTech.HackerNews\SantanderGlobalTech.HackerNews.Api\SantanderGlobalTech.HackerNews.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.9.4" />
